--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "http://alliedtesting.github.io/pgmex-blog"
+url: "http://irublev.github.io/pgmex-blog"
 #baseurl: ""
 title: PgMex Blog
 description: >
@@ -56,7 +56,7 @@ footer-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "alliedtesting.github.io/pgmex-blog"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "irublev.github.io/pgmex-blog"  # eg. "deanattali.com/beautiful-jekyll"
 
 # Output options (more information on Jekyll's site)
 timezone: America/New_York
