--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: "https://irublev.github.io"
+url: "https://irublev.github.io/pgmex-blog"
 baseurl: "/pgmex-blog"
 title: PgMex Blog
 description: >
