--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ subtitle-img: logo.png
 perftesturl: "https://github.com/AlliedTesting/pgmex-jdbc-perf-test"
 
 
+excerpt_separator: <!--end_of_excerpt-->
+
 # google_analytics: "UA-2662385-1"
 
 # gravatar:
