--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: >
 # feedburner: http://feeds.feedburner.com/AlliedTesting
 title-img: allied_logo.jpg
 subtitle-img: logo.png
-pgmexurl: "https://pgmex.alliedtesting.com"
+pgmexurl: "http://pgmex.alliedtesting.com"
 perftesturl: "https://github.com/AlliedTesting/pgmex-jdbc-perf-test"
 
 
