--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ excerpt_length: 200
 #    hash: 
 #    size: 80
 
-site.avatar: logo_small_sqr.png
+avatar: logo_small_sqr.png
 
 disqus:
   shortname: "pgmexblog-test"
