--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 url: "https://irublev.github.io/pgmex-blog"
 baseurl: "/pgmex-blog"
 title: PgMex Blog
-subtitle: About PostgreSQL client library for Matlab
-description: About PostgreSQL client library for Matlab
+subtitle: Allied Testing
+description: PostgreSQL-Matlab connectivity
 # feedburner: http://feeds.feedburner.com/AlliedTesting
-title-img: allied_logo.jpg
-subtitle-img: logo.png
+title-img: logo.png
+title-url: "http://pgmex.alliedtesting.com"
+subtitle-img: allied_logo.gif
+subtitle-url: "https://www.alliedtesting.com"
 pgmexurl: "http://pgmex.alliedtesting.com"
 perftesturl: "https://github.com/AlliedTesting/pgmex-jdbc-perf-test"
 
