--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 url: "https://irublev.github.io/pgmex-blog"
 baseurl: "/pgmex-blog"
+mainurl: "https://irublev.github.io"
 title: PgMex Blog
 subtitle: Allied Testing
 description: PostgreSQL-Matlab connectivity
-# feedburner: http://feeds.feedburner.com/AlliedTesting
+feedburner: http://feeds.feedburner.com/AlliedTesting
 title-img: logo.png
 title-url: "http://pgmex.alliedtesting.com"
 subtitle-img: allied_logo.gif
