--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,7 @@ defaults:
       type: "posts"
     values:
       comments: true  # add comments to all blog posts
+      future: true
   -
     scope:
       path: "" # all files
