--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ disqus:
 github:
   repo: https://github.com/irublev/pgmex-blog
 
-gems:
+plugins:
   - jekyll-feed
   - jekyll-mentions
   - jekyll-sitemap
